Add Google Search Console verification meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="SRI1qNHJ4NLIsZpdCESM3ir0rcNp1GJom59PvnSoiBQ" />
     <title>HealthCompare - Compare Health Products & Save | Trusted Reviews 2025</title>
 
     <!-- SEO Meta Tags -->
