--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Visual enhancements and animations only -->
     <script src="js/animations.js" defer></script>
     <script src="js/testimonial-manager.js" defer></script>
@@ -118,6 +121,7 @@
                     <li><a href="pages/about/index.html">About</a></li>
                     <li><a href="pages/legal/index.html">Legal</a></li>
                     <li><a href="pages/contact/index.html">Contact</a></li>
+                    <li><a href="pages/advertise.html">Advertise</a></li>
                     <li><a href="#prescription-discount-card" class="highlight-link">Prescription Discount Card</a></li>
                 </ul>
             </nav>
@@ -194,6 +198,39 @@
                         <div class="card-footer">
                             <a href="pages/comparators/toothbrushes.html" class="btn btn-small btn-primary">Compare</a>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Advertising Grid Section -->
+    <section class="ad-showcase">
+        <div class="container">
+            <h2>Featured Partners</h2>
+            <div class="ad-grid">
+                <div class="ad-box square-ad" data-ad-slot="homepage-square-1">
+                    <div class="ad-placeholder">
+                        <span>300x300</span>
+                        <a href="pages/advertise.html" class="ad-inquiry">Partner With Us</a>
+                    </div>
+                </div>
+                <div class="ad-box square-ad" data-ad-slot="homepage-square-2">
+                    <div class="ad-placeholder">
+                        <span>300x300</span>
+                        <a href="pages/advertise.html" class="ad-inquiry">Partner With Us</a>
+                    </div>
+                </div>
+                <div class="ad-box square-ad" data-ad-slot="homepage-square-3">
+                    <div class="ad-placeholder">
+                        <span>300x300</span>
+                        <a href="pages/advertise.html" class="ad-inquiry">Partner With Us</a>
+                    </div>
+                </div>
+                <div class="ad-box square-ad" data-ad-slot="homepage-square-4">
+                    <div class="ad-placeholder">
+                        <span>300x300</span>
+                        <a href="pages/advertise.html" class="ad-inquiry">Partner With Us</a>
                     </div>
                 </div>
             </div>
@@ -346,6 +383,19 @@
             </div>
         </div>
     </section>
+
+    <!-- Advertising Banner Section -->
+    <section class="ad-banner-section">
+        <div class="container">
+            <div class="ad-banner horizontal-ad" data-ad-slot="homepage-banner-1">
+                <div class="ad-placeholder">
+                    <span>Advertisement Space - 728x90</span>
+                    <a href="pages/advertise.html" class="ad-inquiry">Advertise Here</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="testimonials section-light animate-on-scroll" data-animation="fade-in">
         <div class="container">
             <h2>What Our Users Say</h2>
@@ -470,6 +520,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
+                <p class="partnership-note">Looking to advertise? <a href="pages/advertise.html">Learn about our advertising opportunities</a> | <a href="pages/contact/partnership.html">Contact our partnership team</a></p>
                 <p class="affiliate-disclosure" role="note">This site contains affiliate links. We may earn a commission if you purchase through these links, at no additional cost to you.</p>
                 <p class="copyright">&copy; 2025 HealthCompare. All rights reserved.</p>
             </div>
