--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                 </div>
                 <div class="footer-contact">
                     <h3>Contact</h3>
-                    <p>Email: info@healthcompare.com</p>
+                    <p>Email: <a href="mailto:nebassel@gmail.com">nebassel@gmail.com</a></p>
                     <div class="social-links">
                         <a href="#" class="social-icon" aria-label="Facebook">
                             <span class="visually-hidden">Facebook</span>
