--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -312,7 +312,7 @@
                 </div>
                 <div class="footer-contact">
                     <h3>Contact</h3>
-                    <p>Email: info@healthcompare.com</p>
+                  <a href="mailto:nebassel@gmail.com">nebassel@gmail.com</a>
                     <div class="social-links">
                         <a href="#" class="social-icon">Facebook</a>
                         <a href="#" class="social-icon">Twitter</a>
@@ -344,3 +344,4 @@
     </script>
 </body>
 </html>
+
