--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -225,7 +225,8 @@
                     <h2>Contact Information</h2>
                     <div class="info-item">
                         <h3>Email</h3>
-                        <p>info@healthcompare.com</p>
+                        <p><a href="mailto:nebassel@gmail.com">nebassel@gmail.com</a></p>
+
                     </div>
                     <div class="info-item">
                         <h3>Social Media</h3>
@@ -344,3 +345,4 @@
     </script>
 </body>
 </html>
+
