--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -225,7 +225,7 @@
                     <h2>Contact Information</h2>
                     <div class="info-item">
                         <h3>Email</h3>
-                        <p>info@healthcompare.com</p>
+                        <p>nebassel@gmail.com</p>
                     </div>
                     <div class="info-item">
                         <h3>Social Media</h3>
@@ -344,3 +344,4 @@
     </script>
 </body>
 </html>
+
